syntax = "proto3";

package pd;

option go_package = "auth-service/pd";

message ChangePasswordRequest {
  string username = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  bool status = 1;
}
